--- a/kooplexhub/hub/templates/apply_cancel.html
+++ b/kooplexhub/hub/templates/apply_cancel.html
@@ -3,6 +3,6 @@
     <button type="submit" class="btn btn-primary" name="button" value="apply">{% if apply %}{{ apply }}{% else %}Apply{% endif %}</button>
   {% endif %}
   {% if not hide_cancel %}
-    <button type="submit" class="btn btn-secondary" {% if modal %}data-bs-dismiss="modal"{% endif %}>{% if cancel %}{{ cancel }}{% else %}Cancel{% endif %}</button>
+    <button type="submit" class="btn btn-secondary" name="button" {% if modal %}data-bs-dismiss="modal"{% else %}value="cancel"{% endif %}>{% if cancel %}{{ cancel }}{% else %}Cancel{% endif %}</button>
   {% endif %}
 </div>
