--- a/kooplexhub/hub/templates/container/manage.html
+++ b/kooplexhub/hub/templates/container/manage.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block main_content_center %}
+<div class="card shadow p-3 mb-5 bg-light rounded">
 <form id="container-manage" class="form-horizontal" action="{% url 'service:configure' container.id %}" method="post">
 {% csrf_token %}
   <ul class="nav nav-tabs" id="serviceConfigTabs" role="tablist">
@@ -25,16 +26,13 @@
       <a class="nav-link {% if active == "filesync" %}active{% endif %}" id="tab-filesync" data-bs-toggle="tab" href="#filesync" role="tab" aria-controls="filesync" aria-selected="{% if active == "filesync" %}true{% else %}false{% endif %}">Synchronized files</a>
     </li>
     <li class="nav-item" role="presentation">
-	    {% comment %}
       <a class="nav-link {% if active == "versioncontrol" %}active{% endif %}" id="tab-versioncontrol" data-bs-toggle="tab" href="#versioncontrol" role="tab" aria-controls="versioncontrol" aria-selected="{% if active == "versioncontrol" %}true{% else %}false{% endif %}">Version control</a>
-	    {% endcomment %}
     </li>
   </ul>
 
   <div class="tab-content" id="serviceConfigTabContent">
     <div class="tab-pane fade {% if active == "image" %}show active{% endif %}" id="image" role="tabpanel" aria-labelledby="tab-image">
       <input type="hidden" name="active_tab" value="image">
-      <div class="card shadow p-3 mb-5 bg-light rounded">
       <h5 class="card-title">Image selection</h5>
       <select name="container_image_id">
         {% for image in images %}
@@ -44,37 +42,31 @@
         {% endfor %}
       </select>
     </div>
-    </div>
 
     <div class="tab-pane fade {% if active == "projects" %}show active{% endif %}" id="projects" role="tabpanel" aria-labelledby="tab-projects">
       <input type="hidden" name="active_tab" value="projects">
-      <div class="card shadow p-3 mb-5 bg-light rounded">
       <h5 class="card-title">Select projects to associate with the service environment</h5>
       {% render_table t_projects %}
-    </div>
     </div>
     
     <div class="tab-pane fade {% if active == "volumes" %}show active{% endif %}" id="volumes" role="tabpanel" aria-labelledby="tab-volumes">...</div>
 
     <div class="tab-pane fade {% if active == "filesync" %}show active{% endif %}" id="filesync" role="tabpanel" aria-labelledby="tab-filesync">
       <input type="hidden" name="active_tab" value="filesync">
-      <div class="card shadow p-3 mb-5 bg-light rounded">
       <h5 class="card-title">Select synchronized libraries to associate with the service environment</h5>
       {% render_table t_synclibs %}
-    </div>
     </div>
 
     <div class="tab-pane fade {% if active == "versioncontrol" %}show active{% endif %}" id="versioncontrol" role="tabpanel" aria-labelledby="tab-vc">
       <input type="hidden" name="active_tab" value="versioncontrol">
-      <div class="card shadow p-3 mb-5 bg-light rounded">
       <h5 class="card-title">Select version control repositores to associate with the service environment</h5>
       {% render_table t_repositories %}
-    </div>
     </div>
   </div>
 
   {% include 'apply_cancel.html' %}
 </form>
+</div>
 
 <script>
   $("#serviceConfigTabs li a").on("click", function () {
@@ -101,7 +93,9 @@
 	    //fixme
     } else if (tab == "tab-versioncontrol") {
       $("#active_tab").attr("value",  "versioncontrol")
-	    //fixme
+      $("#search_field").attr("placeholder",  "Search repository")
+      $("#search_field").attr("value", $("#s_repository").attr("value") )
+	    //enable
     }
     console.log( $("#active_tab").attr("value") )
   })
@@ -118,11 +112,14 @@
   <input type="hidden" name="active_tab" id="active_tab" value="{{ active }}">
   <input type="hidden" id="s_projects" value="{{ user.search.service_projects }}">
   <input type="hidden" id="s_library" value="{{ user.search.service_library }}">
+  <input type="hidden" id="s_repository" value="{{ user.search.service_repository }}">
   <input class="form-control me-2" type="search" id="search_field" name="pattern"
     {% if active == "projects" %}
       value="{{ user.search.service_projects }}" placeholder="Search project"
     {% elif active == "filesync" %}
       value="{{ user.search.service_filesync }}" placeholder="Search library"
+    {% elif active == "versioncontrol" %}
+      value="{{ user.search.service_repository }}" placeholder="Search repository"
     {% else %}
       value="" placeholder="Search"
     {% endif %}
