--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -5,11 +5,17 @@
 {% endblock %}
 
 {% block main_content_center %}
+{% if user.layout.service_list %}
+  {% for service in services %}
+     {% include 'container/partial_list.html' %}
+  {% endfor %}
+{% else %}
 <div class="row row-cols-1 row-cols-md-3 g-4">
   {% for service in services %}
      {% include 'container/partial.html' %}
   {% endfor %}
 </div>
+{% endif %}
 {% endblock %}
 
 {% block main_content_right %}
