--- a/kooplexhub/hub/templates/container/manage.html
+++ b/kooplexhub/hub/templates/container/manage.html
@@ -15,6 +15,9 @@
       <a class="nav-link {% if active == "image" %}active{% endif %}" id="tab-image" data-bs-toggle="tab" href="#image" role="tab" aria-controls="image" aria-selected="{% if active == "image" %}true{% else %}false{% endif %}">Image</a>
     </li>
     <li class="nav-item" role="presentation">
+      <a class="nav-link {% if active == "attachments" %}active{% endif %}" id="tab-attachments" data-bs-toggle="tab" href="#attachments" role="tab" aria-controls="attachments" aria-selected="{% if active == "attachments" %}true{% else %}false{% endif %}">Attachments</a>
+    </li>
+    <li class="nav-item" role="presentation">
       <a class="nav-link {% if active == "projects" %}active{% endif %}" id="tab-projects" data-bs-toggle="tab" href="#projects" role="tab" aria-controls="projects" aria-selected="{% if active == "projects" %}true{% else %}false{% endif %}">Projects</a>
     </li>
     <li class="nav-item" role="presentation">
@@ -43,13 +46,21 @@
       </select>
     </div>
 
+    <div class="tab-pane fade {% if active == "attachments" %}show active{% endif %}" id="attachments" role="tabpanel" aria-labelledby="tab-attachments">
+      <input type="hidden" name="active_tab" value="attachments">
+      <h5 class="card-title">Select attachments to associate with the service environment</h5>
+      {% render_table t_attachments %}
+    </div>
+
     <div class="tab-pane fade {% if active == "projects" %}show active{% endif %}" id="projects" role="tabpanel" aria-labelledby="tab-projects">
       <input type="hidden" name="active_tab" value="projects">
       <h5 class="card-title">Select projects to associate with the service environment</h5>
       {% render_table t_projects %}
     </div>
     
-    <div class="tab-pane fade {% if active == "volumes" %}show active{% endif %}" id="volumes" role="tabpanel" aria-labelledby="tab-volumes">...</div>
+    <div class="tab-pane fade {% if active == "volumes" %}show active{% endif %}" id="volumes" role="tabpanel" aria-labelledby="tab-volumes">
+	    ...
+    </div>
 
     <div class="tab-pane fade {% if active == "filesync" %}show active{% endif %}" id="filesync" role="tabpanel" aria-labelledby="tab-filesync">
       <input type="hidden" name="active_tab" value="filesync">
@@ -83,6 +94,11 @@
       $("#search_field").attr("placeholder",  "Search")
       $("#search_field").attr("value", "" )
 	    //disable
+    } else if (tab == "tab-attachments") {
+      $("#active_tab").attr("value",  "attachments")
+      $("#search_field").attr("placeholder",  "Search attachments")
+      $("#search_field").attr("value", $("#s_attachments").attr("value") )
+	    //enable
     } else if (tab == "tab-filesync") {
       $("#active_tab").attr("value",  "filesync")
       $("#search_field").attr("placeholder",  "Search library")
@@ -111,11 +127,14 @@
   {% csrf_token %}
   <input type="hidden" name="active_tab" id="active_tab" value="{{ active }}">
   <input type="hidden" id="s_projects" value="{{ user.search.service_projects }}">
+  <input type="hidden" id="s_attachments" value="{{ user.search.service_attachments }}">
   <input type="hidden" id="s_library" value="{{ user.search.service_library }}">
   <input type="hidden" id="s_repository" value="{{ user.search.service_repository }}">
   <input class="form-control me-2" type="search" id="search_field" name="pattern"
     {% if active == "projects" %}
       value="{{ user.search.service_projects }}" placeholder="Search project"
+    {% elif active == "attachments" %}
+      value="{{ user.search.service_attachments }}" placeholder="Search attachments"
     {% elif active == "filesync" %}
       value="{{ user.search.service_filesync }}" placeholder="Search library"
     {% elif active == "versioncontrol" %}
