--- a/kooplexhub/hub/templates/container/newattachment.html
+++ b/kooplexhub/hub/templates/container/newattachment.html
@@ -1,15 +1,15 @@
-<div class="modal fade shadow" id="image-new" data-bs-keyboard="false" tabindex="-1" aria-labelledby="newImage" aria-hidden="true">
+<div class="modal fade shadow" id="attachment-new" data-bs-keyboard="false" tabindex="-1" aria-labelledby="newAttachment" aria-hidden="true">
   <div class="modal-dialog shadow bg-light p-1 mb-5  rounded">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="newImage">Create a new service image</h5>
+        <h5 class="modal-title" id="newAttachment">Create a new attachment</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <form id="image_new" class="form-horizontal" action="{% url 'service:newimage' %}" method="post">
+      <form id="attachment_new" class="form-horizontal" action="{% url 'service:newattachment' %}" method="post">
        {% csrf_token %}
         <div class="modal-body">
           <table>
-	    {{ f_newimage.as_table }}
+	    {{ f_newattachment.as_table }}
           </table>
           <input type="hidden" name="user_id" value="{{ user.id }}">
         </div>
