--- a/kooplexhub/hub/templates/project/list.html
+++ b/kooplexhub/hub/templates/project/list.html
@@ -5,6 +5,13 @@
 {% endblock %}
 
 {% block main_content_center %}
+{% if user.layout.project_list %}
+  {% for binding in projectbindings %}
+    {% with project=binding.project %}
+      {% include 'project/partial_list.html' with next_page='project:list' services=project|get_userz_services:user %}
+    {% endwith %}
+  {% endfor %}
+{% else %}
 <div class="row row-cols-1 row-cols-md-3 g-4">
   {% for binding in projectbindings %}
     {% with project=binding.project %}
@@ -12,6 +19,7 @@
     {% endwith %}
   {% endfor %}
 </div>
+{% endif %}
 {% endblock %}
 
 {% block main_content_right %}
