--- a/kooplexhub/hub/templates/project/project_submenu.html
+++ b/kooplexhub/hub/templates/project/project_submenu.html
@@ -23,5 +23,14 @@
 	  {% endcomment %}
         </ul>
      </div>
+     <div class="col-1">
+       <div class="d-flex justify-content-end">
+	 {% if user.layout.project_list %}
+           <a href="{% url 'project:layout_flip' %}" class="text-dark"><span class="oi oi-grid-two-up"></span></a>
+	 {% else %}
+           <a href="{% url 'project:layout_flip' %}" class="text-dark"><span class="oi oi-list"></span></a>
+	 {% endif %}
+       </div>
+     </div>
   </div>
 </nav>
