--- a/kooplexhub/hub/templates/project/project_submenu.html
+++ b/kooplexhub/hub/templates/project/project_submenu.html
@@ -24,6 +24,7 @@
         </ul>
      </div>
      <div class="col-1">
+      {% if submenu == 'list' %}
        <div class="d-flex justify-content-end">
 	 {% if user.layout.project_list %}
            <a href="{% url 'project:layout_flip' %}" class="text-dark"><span class="oi oi-grid-two-up"></span></a>
@@ -31,6 +32,7 @@
            <a href="{% url 'project:layout_flip' %}" class="text-dark"><span class="oi oi-list"></span></a>
 	 {% endif %}
        </div>
+      {% endif %}
      </div>
   </div>
 </nav>
