bootstrap icons added (no need to have inline svg)

--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -11,6 +11,7 @@
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/remixicon.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fonts/icons-1.4.0/font/bootstrap-icons.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fontawesome-free-5.10.2-web/css/all.css' %}">
     {% block css_extra %}{% endblock %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
