final commit for version with django 1.11

--- a/kooplexhub/hub/templates/container/hint_list.html
+++ b/kooplexhub/hub/templates/container/hint_list.html
@@ -2,7 +2,7 @@
   <h6 class="card-head">Environment</h6>
   <div class="card-body">
 	  <p>Environment (aka Service) is a virtualized context with prepared software stack. <br>
-	  See the documentation for <a href="/docs/#/Environments/Main" target="_blank">more</a></p>
+	  See the documentation for <a href="/docs/#/Containers/README.md" target="_blank">more</a></p>
   </div>
 </div>
 
